--- a/maketitle_noindent_b.tex
+++ b/maketitle_noindent_b.tex
@@ -1,5 +1,6 @@
 \maketitle
 \noindent
 {\bf 
-Strong spin-orbit coupling (SOC) leads to numerous novel electronic phases, such as topological insulators and spin-orbit Mott insulators, but tuning the strength of SOC across quantum critical points (QCP) of such phases remains a challenge. Here, we show that competing energy scales of SOC, magnetic exchange coupling, and crystal electric fields in 4$d$ transition-metal oxides naturally poise them near a QCP. Our combined inelastic neutron scattering and theoretical investigation demonstrates in the archetypal 4$d$ Mott insulator \CRO that a crystal electric field effectively tunes the balance between a quantum paramagnet and an antiferromagnetic phase, favored by SOC and magnetic exchange coupling, respectively. Virtual magnetic dipoles emerge from quantum fluctuation between spin-orbit split levels, which upon condensation give rise to a ``Higgs'' amplitude mode most prominent near the QCP. Moving further into the antiferromagnetic phase, the distinct spin-orbital-lattice dynamics in \CRO is captured by a pseudospin Hamiltonian formally describing a spin nematic, thus providing a new framework to interpret SOC driven phenomena in 4$d$ transition-metal oxides.
+Magnetism in transition-metal oxides (TMOs) has traditionally been associated with spin degrees of freedom, as orbital is often largely quenched. On the other hand, recent studies of 5d TMOs have revealed an orbital-dominated magnetism driven by strong spin-orbit coupling (SOC). Here, we uncover a novel ``Higgs'' magnetism in the intermedate strength regime of SOC, characterized by a large fluctuation of the amplitude of the magnetic moment. Using inelastic neutron scattering, we reveal in an archetypal 4$d$ Mott insulator \CRO an amplitude fluctuation---a condensed-matter realization of the Higgs mode---that results from a close competition between SOC and conventional tendency to magnetically order. SOC suppresses magnetic ordering via cancellation between spin and orbital moments, and superexchange process generates quantum fluctuations of virtual magnetic dipoles, which condense upon softening by coupling to a lattice distortion. This unconventional spin-orbital-lattice dynamics in \CRO identifies SOC as a novel source of competing interactions in TMOs and provides a new conceptual framework to interpret SOC driven phenomena in 4d TMOs.
 }
+  
