--- a/To_reproduce_the_obs.tex
+++ b/To_reproduce_the_obs.tex
@@ -1,1 +1,6 @@
-To reproduce the observed spin wave spectra (Fig.~1b), we develop a model following the below reasoning. In the strong SOC limit, the ground state of low-spin $d^4$ configuration of a Ru(IV) ion is nonmagnetic with vanishing effective total angular momentum ($j$) (Fig.~2a). Superexchange interactions between two neighboring Ru(IV) ions, however, generate virtual transitions between $j$=0 and $j$=1 levels, which carry a magnetic dipole and give rise to van Vleck paramagnetism. A condensation of $j$=1 triplons occurs when the energy cost for exciting a triplon ($\lambda$=$\zeta/2$$\sim$80 meV) is offset by the energy gain from magnetic exchange interactions ($J$), with the condensate density $\rho$ corresponding to the size of the static ordered moments. For a two-dimensional square lattice, this induces a quantum phase transition between a paramagnetic and a magnetic ground state when $J$$\sim$$\lambda/4$. A quick inspection, however, shows that the magnitude of $J< 10$ meV reflected in the spin-wave bandwidth falls far short of being able to support a magnetic ground state, even when considering that $\lambda$ can be renormalized to some extent by various effects in a solid (such as covalency, crystal electric fields, and electron correlations).
+\vspace{ 10 pt}
+\noindent
+{\bf Theoretical considerations}
+
+\noindent
+The observed spin wave spectra (Fig.~1b) requires treating SOC on equal footing with other energy scales. We develop a model following the below reasoning. In the strong SOC limit, the ground state of low-spin $d^4$ configuration of a Ru(IV) ion is nonmagnetic with vanishing effective total angular momentum ($j$) (Fig.~2a). Superexchange interactions between two neighboring Ru(IV) ions, however, generate virtual transitions between $j$=0 and $j$=1 levels, which carry a magnetic dipole and give rise to van Vleck paramagnetism. A condensation of $j$=1 triplons occurs when the energy cost for exciting triplons ($\lambda$=$\zeta/2$$\sim$80 meV) is offset by the energy gain from magnetic exchange interactions ($J$) among them, with the condensate density $\rho$ corresponding to the size of the static ordered moments. For a two-dimensional square lattice, this induces a quantum phase transition between a paramagnetic and a magnetic ground state when $J$$\sim$$\lambda/4$. A quick inspection, however, shows that the magnitude of $J$ of at most 10 meV reflected in the spin-wave bandwidth falls far short of being able to support a magnetic ground state, even when considering that $\lambda$ can be renormalized to some extent by various effects in a solid (such as covalency, crystal electric fields, and electron correlations). 
