--- a/For_delta0_the_syste.tex
+++ b/For_delta0_the_syste.tex
@@ -1,1 +1,8 @@
+\vspace{ 10 pt}
+\noindent
+{\bf Simulations of spin-wave spectra based on a microscopic model}
+
+\noindent
+Based on the above picture, we derive a microscopic model (see Supplementary Information) to simulate the spin-wave dispersion across the QCP as shown in Fig.~3. Our theory describes the entire range of $\delta$ (0$\leq\delta$$<\infty$) in terms of two microscopic parameters $\delta$ and $\eta\equiv J_H/U$, where $J_H$ is the Hund's coupling and $U$ is the on-site Coulomb interaction. The overall energy scale of $J$ is fixed by the observed spin-wave bandwidth and $\lambda$ is constrained around the experimental value ($\approx$75 meV) by the relation between $J/\lambda$ and the magnetic moment size, up to some uncertainty due to the covalency factor and quantum fluctuations reducing the moment size. 
+
 For $\delta$=0, the system is in the quantum paramagnetic state (Fig.~3a), in which the three spin-wave modes, associated with the three triplon components ($x$, $y$, and $z$), disperse to a minimum at $\mathbf{q}$=($\pi$,$\pi$) with finite gaps. These three modes are split by $\delta$=0.4 (Fig.~3b), and thereby the $x$ and $y$ modes soften and disperse close to zero energy, signaling a proximity to the QCP. At $\delta$=0.5 (Fig.~3c), one of these two modes has condensed; we let the $y$ mode to condense by introducing a small orthorhombic crystal electric field $\Delta'$ that splits the $x$ and the $y$ modes. [$\Delta'$ is actually needed to describe the experimental data but is not essential for a qualitative understanding]. With a finite magnetic moment along the $y$ axis, the $y$ mode now becomes the amplitude (``Higgs'') mode, and the $x$ mode becomes the transverse (Goldstone) mode. Further away from the QCP at $\delta$=1 (Fig.~3d), the $y$ mode quickly goes high in energy and weaken, whereas the $x$ mode stays as a soft excitation with a gap scaled by $\Delta'$. The $z$ mode has moved out of the plotted energy window. At $\delta$=1.5 (Fig.~3e), the overall dispersion of the transverse $x$ mode, in particular its maximum at the $\Gamma$ point and a rather flat dispersion along $(0,0)$-$(\pi,0)$, gives a good description of the experimental data. At $\delta$$\sim$3 (Fig.~3f), the $x$ mode dispersion starts to turn back down in energy upon approaching $\Gamma$, concurrently with significant weakening of the amplitude mode, and eventually becoming Heisenberg-like in the large $\delta$ limit (Fig.~3g). In this limit, conventional two-magnons (not shown) completely replace the amplitude mode.
