--- a/Our_model_based_on.tex
+++ b/Our_model_based_on.tex
@@ -1,1 +1,6 @@
-Our model, based on the strong-coupling limit, is well justified for \CROns which is established as a Mott insulator, and requires no fine-tuning of the parameters to fit the data. Further, our model provides a microscopic basis for the coupling constants that describe the experimental data, and explains the origin of the Hamilonian that empirically describes the spin-nematic phase: the `spins' represent the highly spin-orbit entangled electronic state that results from the close competition between relativistic SOC and crystal electric fields. Although such spin-orbit entangled states are commonplace in 5$d$ TMOs, the comparable energy scales of $J$ and $\lambda$ in 4$d$ TMOs allows intermixing of multiplets with different $J_{\mathrm {eff}}$ while still preserving the strong spin-orbit entanglement, which is a key distinction from the 5$d$ TMO physics that allows for the unique QCP in 4$d$ TMOs. Further, the fact that substitution of Ca by Sr in \CRO results in a $\delta$$\approx$0 suggests that the QCP may be within a realistic range, if not pre-empted by a Mott transition.
+\vspace{ 10 pt}
+\noindent
+{\bf Direct confirmation of the Higgs amplitude mode using polarized neutrons}
+
+\noindent
+Experimental detection of the amplitude mode is challenging because its intensity is quickly suppressed away from the QCP (Fig.~3i), even further suppressed by the form factor due to its high energy requiring large momentum transfer (Fig. SXX).  Therefore, we used polarized neutrons to isolate magnetic signals, and thereby unambiguously establish the Higgs mode. Because of our sample mosaic, consisting of $\sim$100 individual single crystals, is twinned, i.e. $a$ and $b$ axes are mixed (see Supplementary Information), we can only distinguish between in-plane and out-of-plane polarization of the magnetic modes.   
