--- a/Why_has_strong_SOC.tex
+++ b/Why_has_strong_SOC.tex
@@ -1,1 +1,9 @@
+\vspace{ 10 pt}
+\noindent
+{\bf Discussions}
+
+\noindent
+Our model, based on the strong-coupling limit, is well justified for \CROns, which is established as a Mott insulator, and requires no fine-tuning of the parameters to fit the data. Further, our model provides a microscopic basis for the coupling constants that describe the experimental data, and explains the origin of the Hamilonian that empirically describes the spin-nematic phase: the `spins' represent the highly spin-orbit entangled electronic state that results from the close competition between relativistic SOC and crystal electric fields. Although such spin-orbit entangled states are commonplace in 5$d$ TMOs, the comparable energy scales of $J$ and $\lambda$ in 4$d$ TMOs allows intermixing of multiplets with different $J_{\mathrm {eff}}$ while still preserving the strong spin-orbit entanglement, which is a key distinction from the 5$d$ TMO physics that allows for the unique QCP in 4$d$ TMOs. Further, the fact that substitution of Ca by Sr in \CRO results in a $\delta$$\approx$0 suggests that the QCP may be within a realistic range, if not pre-empted by a Mott transition.
+
 Why has strong SOC in \CRO eluded detection for more than two decades? The fact that INS data has been unavailable until now partly accounts for it, but, in retrospect, it should have been noticed from the large canting angle of the magnetic moment, evident from the net ferromagnetic moment of ($\sim$ 0.3 $\mu_{\mathrm{B}}$/Ru) in the metamagnetic state above a moderate magnetic field of $\approx7$ T. The magnetic structure is very similar to that of Sr$_2$IrO$_4$, in which strong SOC rigidly fixes the magnetic moment with respect to the IrO$_6$ octahedra, and canted moments result from the octahedra rotation. However, as we have seen, the manifestion of SOC is \CRO is quite distinct from that in any of the known 5$d$ TMO; for example, Heisenberg antiferromagnet Sr$_2$IrO$_4$,  Ising-like Sr$_3$Ir$_2$O$_7$, or Na$_2$IrO$_3$ with dominant bond-directional magnetic coupling. It is also different from 3$d$ TMO such as cobaltates or ferrites, where SOC results in exotic non-collinear magnetic structures.
+  
