--- a/noindent_SOC_compete.tex
+++ b/noindent_SOC_compete.tex
@@ -1,3 +1,4 @@
 \noindent
 SOC competes with various other effects in transition-metal oxides that tend to suppress it; for example, crystal electric fields, charge hopping, and superexchange interactions intermix orbital states with different quantum numbers and quench orbital angular momentum. In 5$d$ TMO, SOC dominates over these effects and fosters exotic spin-orbit driven phases. Examples range from correlated analogs of topological insulators to unconventional magnetism  and superconductivity. However, the low-energy physics is confined to the lowest spin-orbit multiplets in the strong SOC limit. On the other hand, spin-orbit effects are rather fragile in 3$d$ TMO and often are suppressed to an insignificant level. Rare examples of non-Heisenberg magnets are found in cobaltates with near-ideal cubic symmetry. As we shall see in this Article, 4$d$ TMO are poised in a `sweet spot' for unconventional electronic properties that emerge from competition of SOC and other traditional players of correlated electron physics. 
   
+As a model system, we study the archetypal 4$d$ Mott insulator \CROns, which is closely related to the unconventional superconductor Sr$_2$RuO$_4$. A redistribution of four $4d$ valence electrons among three $t_{2g}$ orbitals through structural distortions leads to a Mott transition between the two compounds. In \CROns, a ($\pi$,$\pi$) antiferromagnetic order of $\approx$1.3 $\mu_B$ moments develops below T$_N$$\approx$110 K, for which the underlying electronic structure still remains an open question, representing one of the most challenging problems of electron correlations in multi-orbital systems. We use  inelastic neutron scattering (INS) to reveal its spin-wave spectra, and analyze the competing interactions among spin, orbital, and lattice degrees of freedom imprinted on the dynamical structure factor.  
