--- a/title.tex
+++ b/title.tex
@@ -1,2 +1,7 @@
+\newcommand{\CRO}{Ca$_2$RuO$_4$ } 
+\newcommand{\CROns}{Ca$_2$RuO$_4$} 
+
 Soft magnetism from spin-orbit exciton condensate in \CRO
+  
+  
   
