added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -11,3 +11,17 @@
   title = {{Correlated Quantum Phenomena in the Strong Spin-Orbit Regime}},
   journal = {Annu. Rev. Condens. Matter Phys.},
 }
+
+
+@article{Jackeli_2009,
+  doi = {10.1103/physrevlett.102.017205},
+  url = {http://dx.doi.org/10.1103/physrevlett.102.017205},
+  year = {2009},
+  month = {jan},
+  publisher = {American Physical Society ({APS})},
+  volume = {102},
+  number = {1},
+  author = {G. Jackeli and G. Khaliullin},
+  title = {{Mott Insulators in the Strong Spin-Orbit Coupling Limit: From Heisenberg to a Quantum Compass and Kitaev Models}},
+  journal = {Phys. Rev. Lett.},
+}
