added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -25,3 +25,18 @@
   title = {{Mott Insulators in the Strong Spin-Orbit Coupling Limit: From Heisenberg to a Quantum Compass and Kitaev Models}},
   journal = {Phys. Rev. Lett.},
 }
+
+
+@article{Kim_2014,
+  doi = {10.1126/science.1251151},
+  url = {http://dx.doi.org/10.1126/science.1251151},
+  year = {2014},
+  month = {jun},
+  publisher = {American Association for the Advancement of Science ({AAAS})},
+  volume = {345},
+  number = {6193},
+  pages = {187--190},
+  author = {Y. K. Kim and O. Krupin and J. D. Denlinger and A. Bostwick and E. Rotenberg and Q. Zhao and J. F. Mitchell and J. W. Allen and B. J. Kim},
+  title = {{Fermi arcs in a doped pseudospin-1/2 Heisenberg antiferromagnet}},
+  journal = {Science},
+}
