added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -40,3 +40,18 @@
   title = {{Fermi arcs in a doped pseudospin-1/2 Heisenberg antiferromagnet}},
   journal = {Science},
 }
+
+
+@article{Nakatsuji_1997,
+  doi = {10.1143/jpsj.66.1868},
+  url = {http://dx.doi.org/10.1143/jpsj.66.1868},
+  year = {1997},
+  month = {jul},
+  publisher = {Physical Society of Japan},
+  volume = {66},
+  number = {7},
+  pages = {1868--1871},
+  author = {Satoru Nakatsuji and Shin-ichi Ikeda and Yoshiteru Maeno},
+  title = {{Ca  2  {RuO}  4  : New Mott Insulators of Layered Ruthenate}},
+  journal = {Journal of the Physical Society of Japan},
+}
