--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -55,3 +55,18 @@
   title = {{Ca  2  {RuO}  4  : New Mott Insulators of Layered Ruthenate}},
   journal = {Journal of the Physical Society of Japan},
 }
+
+
+@article{Maeno_1994,
+  doi = {10.1038/372532a0},
+  url = {http://dx.doi.org/10.1038/372532a0},
+  year = {1994},
+  month = {dec},
+  publisher = {Nature Publishing Group},
+  volume = {372},
+  number = {6506},
+  pages = {532--534},
+  author = {Y. Maeno and H. Hashimoto and K. Yoshida and S. Nishizaki and T. Fujita and J. G. Bednorz and F. Lichtenberg},
+  title = {{Superconductivity in a layered perovskite without copper}},
+  journal = {Nature},
+}
