added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -70,3 +70,18 @@
   title = {{Superconductivity in a layered perovskite without copper}},
   journal = {Nature},
 }
+
+
+@article{Anisimov_2002,
+  doi = {10.1140/epjb/e20020021},
+  url = {http://dx.doi.org/10.1140/epjb/e20020021},
+  year = {2002},
+  month = {feb},
+  publisher = {Springer Science $\mathplus$ Business Media},
+  volume = {25},
+  number = {2},
+  pages = {191--201},
+  author = {V.I. Anisimov and I.A. Nekrasov and D.E. Kondakov and T.M. Rice and M. Sigrist},
+  title = {{Orbital-selective Mott-insulator transition in Ca 2 - x Sr x {RuO} 4}},
+  journal = {The European Physical Journal B},
+}
