added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -85,3 +85,18 @@
   title = {{Orbital-selective Mott-insulator transition in Ca 2 - x Sr x {RuO} 4}},
   journal = {The European Physical Journal B},
 }
+
+
+@article{Kim_2009,
+  doi = {10.1126/science.1167106},
+  url = {http://dx.doi.org/10.1126/science.1167106},
+  year = {2009},
+  month = {mar},
+  publisher = {American Association for the Advancement of Science ({AAAS})},
+  volume = {323},
+  number = {5919},
+  pages = {1329--1332},
+  author = {B. J. Kim and H. Ohsumi and T. Komesu and S. Sakai and T. Morita and H. Takagi and T. Arima},
+  title = {{Phase-Sensitive Observation of a Spin-Orbital Mott State in Sr2IrO4}},
+  journal = {Science},
+}
