added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -100,3 +100,17 @@
   title = {{Phase-Sensitive Observation of a Spin-Orbital Mott State in Sr2IrO4}},
   journal = {Science},
 }
+
+
+@article{Kim_2008,
+  doi = {10.1103/physrevlett.101.076402},
+  url = {http://dx.doi.org/10.1103/physrevlett.101.076402},
+  year = {2008},
+  month = {aug},
+  publisher = {American Physical Society ({APS})},
+  volume = {101},
+  number = {7},
+  author = {B. J. Kim and Hosub Jin and S. J. Moon and J.-Y. Kim and B.-G. Park and C. S. Leem and Jaejun Yu and T. W. Noh and C. Kim and S.-J. Oh and J.-H. Park and V. Durairaj and G. Cao and E. Rotenberg},
+  title = {{Novel   J eff  = 1 / 2  Mott State Induced by Relativistic Spin-Orbit Coupling in   Sr 2   {IrO} 4}},
+  journal = {Phys. Rev. Lett.},
+}
