--- a/abstract.tex
+++ b/abstract.tex
@@ -1,7 +1,8 @@
 \maketitle
 \noindent
 {\bf 
-Magnetism in transition-metal oxides (TMOs) has traditionally been associated with spin degrees of freedom, as orbital is often largely quenched. On the other hand, recent studies of 5d TMOs have revealed an orbital-dominated magnetism driven by strong spin-orbit coupling (SOC). Here, we uncover a novel ``Higgs'' magnetism in the intermedate strength regime of SOC, characterized by a large fluctuation of the amplitude of the magnetic moment. Using inelastic neutron scattering, we reveal in an archetypal 4$d$ Mott insulator \CRO an amplitude fluctuation---a condensed-matter realization of the Higgs mode---that results from a close competition between SOC and conventional tendency to magnetically order. SOC suppresses magnetic ordering via cancellation between spin and orbital moments, and superexchange process generates quantum fluctuations of virtual magnetic dipoles, which condense upon softening by coupling to a lattice distortion. This unconventional spin-orbital-lattice dynamics in \CRO identifies SOC as a novel source of competing interactions in TMOs and provides a new conceptual framework to interpret SOC driven phenomena in 4d TMOs.
+Magnetism in transition-metal oxides (TMOs) has traditionally been associated with spin degrees of freedom, as orbital is often largely quenched. On the other hand, recent studies of 5d TMOs have revealed an unconventional, orbital-dominated magnetism driven by strong spin-orbit coupling (SOC). Here, we uncover a novel ``Higgs'' magnetism in the intermedate strength regime of SOC, characterized by a large fluctuation of the amplitude of the magnetic moment. Using inelastic neutron scattering, we reveal in an archetypal 4$d$ Mott insulator \CRO an amplitude fluctuation that results from a close competition between SOC and conventional tendency to magnetically order. SOC tends to suppress magnetic ordering via cancellation between spin and orbital moments, whereas superexchange process generates quantum fluctuations of virtual magnetic dipoles, which condense upon softening by coupling to a lattice distortion. This unconventional spin-orbital-lattice dynamics in \CRO identifies SOC as a novel source of competing interactions in TMOs and provides a new conceptual framework to interpret SOC driven phenomena in 4d TMOs.
 }
+  
   
   
