added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -114,3 +114,18 @@
   title = {{Novel   J eff  = 1 / 2  Mott State Induced by Relativistic Spin-Orbit Coupling in   Sr 2   {IrO} 4}},
   journal = {Phys. Rev. Lett.},
 }
+
+
+@article{Braden_1998,
+  doi = {10.1103/physrevb.58.847},
+  url = {http://dx.doi.org/10.1103/physrevb.58.847},
+  year = {1998},
+  month = {jul},
+  publisher = {American Physical Society ({APS})},
+  volume = {58},
+  number = {2},
+  pages = {847--861},
+  author = {M. Braden and G. Andr{\'{e}} and S. Nakatsuji and Y. Maeno},
+  title = {{Crystal and magnetic structure of     Ca   2       {RuO}   4    :  Magnetoelastic coupling and the metal-insulator transition}},
+  journal = {Phys. Rev. B},
+}
