--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -129,3 +129,17 @@
   title = {{Crystal and magnetic structure of     Ca   2       {RuO}   4    :  Magnetoelastic coupling and the metal-insulator transition}},
   journal = {Phys. Rev. B},
 }
+
+
+@article{Mizokawa_2001,
+  doi = {10.1103/physrevlett.87.077202},
+  url = {http://dx.doi.org/10.1103/physrevlett.87.077202},
+  year = {2001},
+  month = {jul},
+  publisher = {American Physical Society ({APS})},
+  volume = {87},
+  number = {7},
+  author = {T. Mizokawa and L. H. Tjeng and G. A. Sawatzky and G. Ghiringhelli and O. Tjernberg and N. B. Brookes and H. Fukazawa and S. Nakatsuji and Y. Maeno},
+  title = {{Spin-Orbit Coupling in the Mott Insulator     Ca   2       {RuO}   4}},
+  journal = {Phys. Rev. Lett.},
+}
