added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -143,3 +143,17 @@
   title = {{Spin-Orbit Coupling in the Mott Insulator     Ca   2       {RuO}   4}},
   journal = {Phys. Rev. Lett.},
 }
+
+
+@article{Haverkort_2008,
+  doi = {10.1103/physrevlett.101.026406},
+  url = {http://dx.doi.org/10.1103/physrevlett.101.026406},
+  year = {2008},
+  month = {jul},
+  publisher = {American Physical Society ({APS})},
+  volume = {101},
+  number = {2},
+  author = {M. W. Haverkort and I. S. Elfimov and L. H. Tjeng and G. A. Sawatzky and A. Damascelli},
+  title = {{Strong Spin-Orbit Coupling Effects on the Fermi Surface of   Sr 2   {RuO} 4   and   Sr 2   {RhO} 4}},
+  journal = {Phys. Rev. Lett.},
+}
