added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -157,3 +157,18 @@
   title = {{Strong Spin-Orbit Coupling Effects on the Fermi Surface of   Sr 2   {RuO} 4   and   Sr 2   {RhO} 4}},
   journal = {Phys. Rev. Lett.},
 }
+
+
+@article{Hotta_2002,
+  doi = {10.1002/chin.200205244},
+  url = {http://dx.doi.org/10.1002/chin.200205244},
+  year = {2002},
+  month = {feb},
+  publisher = {Wiley-Blackwell},
+  volume = {33},
+  number = {5},
+  pages = {no--no},
+  author = {Takashi Hotta and Elbio Dagotto},
+  title = {{{ChemInform} Abstract: Prediction of Orbital Ordering in Single-Layered Ruthenates.}},
+  journal = {{ChemInform}},
+}
