added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -172,3 +172,17 @@
   title = {{{ChemInform} Abstract: Prediction of Orbital Ordering in Single-Layered Ruthenates.}},
   journal = {{ChemInform}},
 }
+
+
+@article{Gorelov_2010,
+  doi = {10.1103/physrevlett.104.226401},
+  url = {http://dx.doi.org/10.1103/physrevlett.104.226401},
+  year = {2010},
+  month = {jun},
+  publisher = {American Physical Society ({APS})},
+  volume = {104},
+  number = {22},
+  author = {E. Gorelov and M. Karolak and T. O. Wehling and F. Lechermann and A. I. Lichtenstein and E. Pavarini},
+  title = {{Nature of the Mott Transition in   Ca 2   {RuO} 4}},
+  journal = {Phys. Rev. Lett.},
+}
