added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -186,3 +186,17 @@
   title = {{Nature of the Mott Transition in   Ca 2   {RuO} 4}},
   journal = {Phys. Rev. Lett.},
 }
+
+
+@article{Liebsch_2007,
+  doi = {10.1103/physrevlett.98.216403},
+  url = {http://dx.doi.org/10.1103/physrevlett.98.216403},
+  year = {2007},
+  month = {may},
+  publisher = {American Physical Society ({APS})},
+  volume = {98},
+  number = {21},
+  author = {A. Liebsch and H. Ishida},
+  title = {{Subband Filling and Mott Transition in   Ca  2 - x    Sr x   {RuO} 4}},
+  journal = {Phys. Rev. Lett.},
+}
