added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -200,3 +200,17 @@
   title = {{Subband Filling and Mott Transition in   Ca  2 - x    Sr x   {RuO} 4}},
   journal = {Phys. Rev. Lett.},
 }
+
+
+@article{Khaliullin_2013,
+  doi = {10.1103/physrevlett.111.197201},
+  url = {http://dx.doi.org/10.1103/physrevlett.111.197201},
+  year = {2013},
+  month = {nov},
+  publisher = {American Physical Society ({APS})},
+  volume = {111},
+  number = {19},
+  author = {Giniyat Khaliullin},
+  title = {{Excitonic Magnetism in Van Vleck{\textendash}type   d 4   Mott Insulators}},
+  journal = {Phys. Rev. Lett.},
+}
