edited Theoretical considerations.tex

--- a/Theoretical considerations.tex
+++ b/Theoretical considerations.tex
@@ -3,9 +3,11 @@
 {\bf Theoretical considerations}
 
 \noindent
-The observed spin wave spectra (Fig.~1b) requires treating SOC on equal footing with other energy scales. We develop a model following the below reasoning. In the strong SOC limit, the ground state of low-spin $d^4$ configuration of a Ru(IV) ion is nonmagnetic with vanishing effective total angular momentum ($j$) (Fig.~2a). Superexchange interactions between two neighboring Ru(IV) ions, however, generate virtual transitions between $j$=0 and $j$=1 levels, which carry a magnetic dipole and give rise to van Vleck paramagnetism. A condensation of $j$=1 triplons occurs when the energy cost for exciting triplons ($\lambda$=$\zeta/2$$\sim$80 meV) is offset by the energy gain from magnetic exchange interactions ($J$) among them, with the condensate density $\rho$ corresponding to the size of the static ordered moments. For a two-dimensional square lattice, this induces a quantum phase transition between a paramagnetic and a magnetic ground state when $J$$\sim$$\lambda/4$. A quick inspection, however, shows that the magnitude of $J$ of at most 10 meV reflected in the spin-wave bandwidth falls far short of being able to support a magnetic ground state, even when considering that $\lambda$ can be renormalized to some extent by various effects in a solid (such as covalency, crystal electric fields, and electron correlations). 
+The observed spin wave spectra (Fig.~1b) requires treating SOC on equal footing with other energy scales. We develop a model following the below reasoning. In the strong SOC limit, the ground state of low-spin $d^4$ configuration of a Ru(IV) ion is nonmagnetic with vanishing effective total angular momentum ($j$) (Fig.~2a)\cite{Khaliullin_2013}. Superexchange interactions between two neighboring Ru(IV) ions, however, generate virtual transitions between $j$=0 and $j$=1 levels, which carry a magnetic dipole and give rise to van Vleck paramagnetism\cite{Khaliullin_2013}. A condensation of $j$=1 triplons occurs when the energy cost for exciting triplons ($\lambda$=$\zeta/2$$\sim$80 meV) is offset by the energy gain from magnetic exchange interactions ($J$) among them, with the condensate density $\rho$ corresponding to the size of the static ordered moments. For a two-dimensional square lattice, this induces a quantum phase transition between a paramagnetic and a magnetic ground state when $J$$\sim$$\lambda/4$. A quick inspection, however, shows that the magnitude of $J$ of at most 10 meV reflected in the spin-wave bandwidth falls far short of being able to support a magnetic ground state, even when considering that $\lambda$ can be renormalized to some extent by various effects in a solid (such as covalency, crystal electric fields, and electron correlations). 
 
 An alternative route to a magnetic order is through the tetragonal distortion ($\Delta$) of the RuO$_6$ octahedra (Fig.~2a), which in the limit of $\delta$($\equiv$$\Delta/2\lambda$)$\rightarrow$$\infty$ results in a complete quenching of orbital angular momentum as assumed in most theories. A correct theory for \CRO that accounts for both the XY-like dispersion and the finite magnetic order, therefore, must include both SOC and the lattice distortion. 
 Typically, the energy scale of $\Delta$ in TMO is $\sim$100 meV, which leads to a unique energy hierarchy in 4$d$ TMO with $\Delta$$\sim$$\lambda$ that locates them in a close proximity of a QCP. Figure 2 illustrates this point; $\Delta$ splits the $j$=1 triplets into a doublet ($T_x$,$T_y$) and a singlet ($T_z$) and thereby lowers the energy cost to excite a triplon (Fig.~2a and 2b). Thus, for a fixed $J$ and $\lambda$, the magnetic QCP is driven by $\delta$ (Fig.~2c). In fact, neither $J$ nor $\lambda$ is easily tunable, but $\delta$ can be tuned through epitaxial strain or uniaxial pressure. In the limit $\delta$$\rightarrow$$\infty$, the doublet merges with the $j$=0 singlet ($s$), and the resulting three levels constitute an isotropic spin-one Heisenberg antiferromagnet. We further note that so long as the $T_z$ mode can be neglected ($\delta\gtrsim0.6$), the magnetic Hamiltonian can be expressed in terms of pseudospins ($\tilde{\mathbf{S}}$) with the transformation \{$s$,$T_x$,$T_y$\}$\rightarrow$\{$\tilde{S_x}$,$\tilde{S_y}$,$\tilde{S_z}$\} (Fig.~2a), which is formally similar to the Hamiltonian much discussed in the context of spin nematic phases. %Because $\Delta$ can be tuned through uniaxial pressure or epitaxial strain, the competing interactions in 4$d$ TMO allow a distinct mechanism for tuning across different SOC induced electronic states.
+  
+  
   
   
