added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -214,3 +214,17 @@
   title = {{Excitonic Magnetism in Van Vleck{\textendash}type   d 4   Mott Insulators}},
   journal = {Phys. Rev. Lett.},
 }
+
+
+@article{Meetei_2015,
+  doi = {10.1103/physrevb.91.054412},
+  url = {http://dx.doi.org/10.1103/physrevb.91.054412},
+  year = {2015},
+  month = {feb},
+  publisher = {American Physical Society ({APS})},
+  volume = {91},
+  number = {5},
+  author = {O. Nganba Meetei and William S. Cole and Mohit Randeria and Nandini Trivedi},
+  title = {{Novel magnetic state in   d 4   Mott insulators}},
+  journal = {Phys. Rev. B},
+}
