added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -228,3 +228,17 @@
   title = {{Novel magnetic state in   d 4   Mott insulators}},
   journal = {Phys. Rev. B},
 }
+
+
+@article{Fatuzzo_2015,
+  doi = {10.1103/physrevb.91.155104},
+  url = {http://dx.doi.org/10.1103/physrevb.91.155104},
+  year = {2015},
+  month = {apr},
+  publisher = {American Physical Society ({APS})},
+  volume = {91},
+  number = {15},
+  author = {C. G. Fatuzzo and M. Dantz and S. Fatale and P. Olalde-Velasco and N. E. Shaik and B. Dalla Piazza and S. Toth and J. Pelliciari and R. Fittipaldi and A. Vecchione and N. Kikugawa and J. S. Brooks and H. M. R{\o}nnow and M. Grioni and Ch. Rüegg and T. Schmitt and J. Chang},
+  title = {{Spin-orbit-induced orbital excitations in    Sr 2   {RuO} 4    and    Ca 2   {RuO} 4    : A resonant inelastic x-ray scattering study}},
+  journal = {Phys. Rev. B},
+}
