--- a/Spin-wave.tex
+++ b/Spin-wave.tex
@@ -3,8 +3,9 @@
 {\bf Spin-wave spectra reveals XY-type magnetism}
 
 \noindent
-Figures 1a and 1b plot, respectively, constant-energy maps and INS spectra along high-symmetry directions, comprising spin-wave dispersion in the energy range 14 $\lesssim$ $\hbar\omega$ $\lesssim$ 45 meV and phonon modes above $\sim$50 meV. The magnetic nature of the former is explicitly confirmed by using polarized neutrons (see Fig.~X), and the non-magnetic nature of the latter is inferred from exhaustion of all magnetic modes and also through comparison with phonon modes in Raman scattering data (See Supplementary Fig.~1). The spin-wave emanates from the ordering vector ($\pi$,$\pi$) with a gap of $\approx$14 meV, and reaches a maximum at the $\Gamma$ point, qualitatively deviating from the well-known Heisenberg dispersion relations (Fig.~1c). Rather, the dispersion more resembles that of a XY magnet, which has a maximum at the $\Gamma$ point. This extreme magnetic anisotropy axiomatically implies strong SOC, which is consistent with the general expectation based on the atomic relativistic SOC constant $\zeta$=161 meV for Ru(IV) and indicated in earlier experiments\cite{Mizokawa_2001,Haverkort_2008}, but not included in most theories\cite{Anisimov_2002,Hotta_2002,Liebsch_2007,Gorelov_2010}. This negligence of SOC has led to the view that the Mott insulation occurs in the half-filled $yz$ and $zx$ orbitals (meaning fully occupied $xy$ orbital), which necessarily implies a complete quenching of the orbital degrees of freedom, and hence that \CRO is a spin-one Heisenberg antiferromaget. This long-held view becomes untenable with our INS data.
+Figures 1a and 1b plot, respectively, constant-energy maps and INS spectra along high-symmetry directions, comprising spin-wave dispersion in the energy range 14 $\lesssim$ $\hbar\omega$ $\lesssim$ 45 meV and phonon modes above $\sim$50 meV. The magnetic nature of the former is explicitly confirmed by using polarized neutrons (see Fig.~X), and the non-magnetic nature of the latter is inferred from exhaustion of all magnetic modes and also through comparison with phonon modes in Raman scattering data (See Supplementary Fig.~1). The spin-wave emanates from the ordering vector ($\pi$,$\pi$) with a gap of $\approx$14 meV, and reaches a maximum at the $\Gamma$ point, qualitatively deviating from the well-known Heisenberg dispersion relations (Fig.~1c). Rather, the dispersion more resembles that of a XY magnet, which has a maximum at the $\Gamma$ point. This extreme magnetic anisotropy axiomatically implies strong SOC, which is consistent with the general expectation based on the atomic relativistic SOC constant $\zeta$=161 meV for Ru(IV) and indicated in earlier experiments\cite{Mizokawa_2001,Haverkort_2008,Fatuzzo_2015}, but not included in most theories\cite{Anisimov_2002,Hotta_2002,Liebsch_2007,Gorelov_2010}. This negligence of SOC has led to the view that the Mott insulation occurs in the half-filled $yz$ and $zx$ orbitals (meaning fully occupied $xy$ orbital), which necessarily implies a complete quenching of the orbital degrees of freedom, and hence that \CRO is a spin-one Heisenberg antiferromaget. This long-held view becomes untenable with our INS data.
 
+  
   
   
   
