added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -242,3 +242,18 @@
   title = {{Spin-orbit-induced orbital excitations in    Sr 2   {RuO} 4    and    Ca 2   {RuO} 4    : A resonant inelastic x-ray scattering study}},
   journal = {Phys. Rev. B},
 }
+
+
+@article{Nakatsuji_2000,
+  doi = {10.1103/physrevb.62.6458},
+  url = {http://dx.doi.org/10.1103/physrevb.62.6458},
+  year = {2000},
+  month = {sep},
+  publisher = {American Physical Society ({APS})},
+  volume = {62},
+  number = {10},
+  pages = {6458--6466},
+  author = {S. Nakatsuji and Y. Maeno},
+  title = {{Switching of magnetic coupling by a structural symmetry change near the Mott transition in Ca2-{xSrxRuO}4}},
+  journal = {Phys. Rev. B},
+}
