added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -245,15 +245,15 @@
 
 
 @article{Nakatsuji_2000,
-  doi = {10.1103/physrevlett.84.2666},
-  url = {http://dx.doi.org/10.1103/physrevlett.84.2666},
+  doi = {10.1103/physrevb.62.6458},
+  url = {http://dx.doi.org/10.1103/physrevb.62.6458},
   year = {2000},
-  month = {mar},
+  month = {sep},
   publisher = {American Physical Society ({APS})},
-  volume = {84},
-  number = {12},
-  pages = {2666--2669},
+  volume = {62},
+  number = {10},
+  pages = {6458--6466},
   author = {S. Nakatsuji and Y. Maeno},
-  title = {{Quasi-Two-Dimensional Mott Transition System     Ca   2 - x       Sr   x       {RuO}   4}},
-  journal = {Phys. Rev. Lett.},
+  title = {{Switching of magnetic coupling by a structural symmetry change near the Mott transition in Ca2-{xSrxRuO}4}},
+  journal = {Phys. Rev. B},
 }
