--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -257,3 +257,21 @@
   title = {{Switching of magnetic coupling by a structural symmetry change near the Mott transition in Ca2-{xSrxRuO}4}},
   journal = {Phys. Rev. B},
 }
+
+@article{Nakatsuji_2000_2,
+  title = {Quasi-Two-Dimensional Mott Transition System ${\mathrm{Ca}}_{2-\mathit{x}}{\mathrm{Sr}}_{\mathit{x}}{\mathrm{RuO}}_{4}$},
+  author = {Nakatsuji, S. and Maeno, Y.},
+  journal = {Phys. Rev. Lett.},
+  volume = {84},
+  issue = {12},
+  pages = {2666--2669},
+  numpages = {0},
+  year = {2000},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.84.2666},
+  url = {http://link.aps.org/doi/10.1103/PhysRevLett.84.2666}
+}
+
+
+  
