--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -258,7 +258,7 @@
   journal = {Phys. Rev. B},
 }
 
-@article{Nakatsuji_2000_2,
+@article{Nakatsuji_2000a,
   title = {Quasi-Two-Dimensional Mott Transition System ${\mathrm{Ca}}_{2-\mathit{x}}{\mathrm{Sr}}_{\mathit{x}}{\mathrm{RuO}}_{4}$},
   author = {Nakatsuji, S. and Maeno, Y.},
   journal = {Phys. Rev. Lett.},
@@ -274,4 +274,5 @@
 }
 
 
+  
   
