added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -258,8 +258,9 @@
   journal = {Phys. Rev. B},
 }
 
+
 @article{Nakatsuji_2000_2,
-  title = {Quasi-Two-Dimensional Mott Transition System ${\mathrm{Ca}}_{2-\mathit{x}}{\mathrm{Sr}}_{\mathit{x}}{\mathrm{RuO}}_{4}$},
+  title = {{Quasi-Two-Dimensional Mott Transition System ${\mathrm{Ca}}_{2-\mathit{x}}{\mathrm{Sr}}_{\mathit{x}}{\mathrm{RuO}}_{4}$}},
   author = {Nakatsuji, S. and Maeno, Y.},
   journal = {Phys. Rev. Lett.},
   volume = {84},
@@ -270,11 +271,20 @@
   month = {Mar},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.84.2666},
-  url = {http://link.aps.org/doi/10.1103/PhysRevLett.84.2666}
+  url = {http://link.aps.org/doi/10.1103/PhysRevLett.84.2666},
 }
 
 
-  
-  
-  
-  
+@article{R_egg_2003,
+  doi = {10.1038/nature01617},
+  url = {http://dx.doi.org/10.1038/nature01617},
+  year = {2003},
+  month = {may},
+  publisher = {Nature Publishing Group},
+  volume = {423},
+  number = {6935},
+  pages = {62--65},
+  author = {Ch. Rüegg and N. Cavadini and A. Furrer and H.-U. Güdel and K. Krämer and H. Mutka and A. Wildes and K. Habicht and P. Vorderwisch},
+  title = {{Bose{\textendash}Einstein condensation of the triplet states in the magnetic insulator {TlCuCl}3}},
+  journal = {Nature},
+}
