added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -288,3 +288,18 @@
   title = {{Bose{\textendash}Einstein condensation of the triplet states in the magnetic insulator {TlCuCl}3}},
   journal = {Nature},
 }
+
+
+@ARTICLE{Kim2015,
+  author = {{Kim}, Y.~K. and {Sung}, N.~H. and {Denlinger}, J.~D. and {Kim}, B.~J.},
+  title = {{Observation of a \$d\$-wave gap in electron-doped Sr\$\_2\$IrO\$\_4\$}},
+  journal = {ArXiv e-prints},
+  archiveprefix = {arXiv},
+  eprint = {1506.06639},
+  primaryclass = {cond-mat.str-el},
+  keywords = {Condensed Matter - Strongly Correlated Electrons, Condensed Matter - Materials Science, Condensed Matter - Superconductivity},
+  year = {2015},
+  month = {jun},
+  adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150606639K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
