--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -303,3 +303,18 @@
   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150606639K},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 }
+
+
+@ARTICLE{Yan2015,
+  author = {{Yan}, Y.~J. and {Ren}, M.~Q. and {Xu}, H.~C. and {Xie}, B.~P. and {Tao}, R. and {Choi}, H.~Y. and {Lee}, N. and {Choi}, Y.~J. and {Zhang}, T. and {Feng}, D.~L.},
+  title = {{Signature of high temperature superconductivity in electron doped Sr2IrO4}},
+  journal = {ArXiv e-prints},
+  archiveprefix = {arXiv},
+  eprint = {1506.06557},
+  primaryclass = {cond-mat.supr-con},
+  keywords = {Condensed Matter - Superconductivity},
+  year = {2015},
+  month = {jun},
+  adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150606557Y},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
