added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -318,3 +318,19 @@
   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150606557Y},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 }
+
+
+@article{BREED1969205,
+  title = {{Magnetic properties of K2CoF4 and Rb2CoF4; two-dimensional Ising antiferromagnets}},
+  journal = {Physica},
+  volume = {45},
+  number = {2},
+  pages = {205 - 216},
+  year = {1969},
+  note = {},
+  issn = {0031-8914},
+  doi = {http://dx.doi.org/10.1016/0031-8914(69)90073-1},
+  url = {http://www.sciencedirect.com/science/article/pii/0031891469900731},
+  author = {D.J. Breed and K. Gilijamse and A.R. Miedema},
+  abstract = {The magnetic properties have been studied of two antiferromagnetic cobalt compounds, K2CoF4 and Rb2CoF4; the crystal structure of these salts strongly suggests the occurrence of largely isolated quadratic layers of magnetic atoms. The magnetic exchange between the cobalt ions is strongly anisotropic, which makes the two compounds good examples of the two-dimensional Ising model. The Néel temperatures of the two salts are 107 K for K2CoF4 and 101 K for Rb2CoF4. If the exchange constant J is defined by Eex = −2JSi·Sj, where S is the real spin moment, it is shown that Jk = −(19.3 ± 2.5) K andJk = −(15.1 ± 1.8) K for the two compounds, respectively. A number of theoretical results by Fisher for the quadratic Ising antiferromagnet are verified.},
+}
