--- a/Comparison.tex
+++ b/Comparison.tex
@@ -3,8 +3,9 @@
 {\bf Comparison to the data}
 
 \noindent
-Our two-parameter model provides an unbiased description of the data, and makes a definite prediction of the amplitude mode. Although \CRO is not in the immediate vicinity of the QCP, the condensate density is far from saturation, and the amplitude mode still retains a sizable intensity to be experimentally observed (Fig.~3h and 3i). Figure 4 shows the best fit of the above model (Fig.~1b) to the experimental data at three representative $\mathbf{q}$ points. Here, we allow the coupling constants to vary independently of one another around the values obtained from the microscopic parameters, considering that our model is minimal, and that the coupling constants in real materials are always renormalized by various effects not taken into account in our model. This results in a better fitting of the transverse mode dispersion. This turn fixes the dispersion of the amplitude mode that provides a good starting point for experimental detection. 
+Our two-parameter model provides an unbiased description of the data, and makes a definite prediction of the amplitude mode. Although \CRO is not in the immediate vicinity of the QCP, the condensate density is far from saturation, and the amplitude mode still retains a sizable intensity to be experimentally observed (Fig.~3h and 3i). Figure 4 shows the best fit of the above model (Fig.~1b) to the experimental data at three representative $\mathbf{q}$ points. Here, we allow the coupling constants to vary independently of one another around the values obtained from the microscopic parameters, considering that our model is minimal, and that the coupling constants in real materials are always renormalized by various effects not taken into account in our model. This results in a better fitting of the transverse mode dispersion. This in turn fixes the dispersion of the amplitude mode that provides a good starting point for experimental detection. 
 
+  
   
   
   
